--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
   pointer-events: none;
 }
 
-.App-header {
+.login-box {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -16,7 +16,7 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  /* color: white; */
 }
 
 .App-link {
