product description part done

--- a/src/Component/ProductDetails/productDetails.css
+++ b/src/Component/ProductDetails/productDetails.css
@@ -9,3 +9,20 @@
 #btnMen {
     width: 150px;
 }
+.rating > i {
+    color: green;
+}
+.productNamePrice {
+    font-family: monospace;
+    font-size: 25px;
+    color: black;
+}
+#productDescription {
+    font-size: 20px;
+    font-weight: 900;
+    font-family: fantasy;
+    color: peru;
+}
+#productDescCard {
+    background-color: rgba(255, 255, 255, 0.151);
+}
