--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,7 @@
 body {
+  font-size: 14px;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: "NewSans", "Avenir Next", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -11,3 +10,15 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+
+/* body {
+  font-size: 14px;
+  background-color: #EEE;
+  min-height: 100%;
+  height: auto;
+}
+
+body, input, select, textarea {
+  font-family: "NewSans", "Avenir Next", sans-serif;
+} */
